5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1808_2578.log
== TEST (2019-06-09 08:09:13) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 < size(grupo_1)):
			grupo_1[i] = pontos[i] 
print(grupo_1)
-- ERROR:
File "XXXX", line 9
    for in range(size(pontos)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 08:09:30) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 < size(grupo_1)):
			grupo_1[i] = pontos[i] 
print(grupo_1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 08:10:09) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 < size(grupo_1)):
			grupo_1[i_1] = pontos[i] 
print(grupo_1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 08:10:58) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 <= size(grupo_1)):
			grupo_1[i_1] = pontos[i] 
print(grupo_1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 08:11:19) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 <= size(grupo_1)):
			grupo_1[i_1] = pontos[i] 
	print(grupo_1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 08:12:37) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 <= size(grupo_1)):
			grupo_1[i_1] = pontos[i] 
	i_1 = i_1 + 1
print(grupo_1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 08:12:57) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 <= size(grupo_1)):
			grupo_1[i_1] = pontos[i] 
		i_1 = i_1 + 1
print(grupo_1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-09 08:13:07) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 <= size(grupo_1)):
			grupo_1[i_1] = pontos[i] 
			i_1 = i_1 + 1
print(grupo_1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-09 08:13:20) 
-- CODE:
from numpy import*
pontos = array(eval(input("potos dos alunos:")))
par = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		par = par + 1
grupo_1 = zeros(par, dtype=int)
i_1 = 0
for i in range(size(pontos)):
	if(pontos[i] % 2 == 0):
		if(i_1 <= size(grupo_1)):
			grupo_1[i_1] = pontos[i] 
			i_1 = i_1 + 1
print(grupo_1)
-- EXECUTION TIME:
1.17109
-- TEST CASE 1:
---- input:
[120,130,140,150,160,170,180,190,201]
---- correct output:
[120 130 140 150 160 170 180 190]
---- user output:
[120 130 140 150 160 170 180 190]
-- TEST CASE 2:
---- input:
[131,180]
---- correct output:
[180]
---- user output:
[180]
-- TEST CASE 3:
---- input:
[333,567,899,214]
---- correct output:
[214]
---- user output:
[214]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
